<resources>
    <string name="app_name">Calculator</string>

    <!-- App Bar Titles -->
    <string name="title_calculator">Calculator</string>
    <string name="title_history">History</string>

    <!--  Number Pad Button Names  -->
    <string name="period">.</string>
    <string name="zero">0</string>
    <string name="delete">DEL</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!--  Arithmetic Operator Button Names  -->
    <string name="equals_sign">=</string>
    <string name="plus_sign">\u002B</string>
    <string name="minus_sign">\u2212</string>
    <string name="multiply_sign">\u00D7</string>
    <string name="divide_sign">\u00F7</string>
    <string name="action_history">History</string>
    <string name="cleared_history_message">History Cleared!</string>
    <string name="action_delete_history">Delete History</string>
    <string name="sample_expression_text">1+2–3+4–5+6–7+8–9+10–11+12–13+14–15+16–17+18–19+20</string>
    <string name="sample_result_text">12</string>
</resources>
