<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.calculator.domain.Operator" />

        <variable
            name="viewModel"
            type="com.example.calculator.presentation.calculator.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/result_preview_text_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/btn_controls_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/column_1_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25060827"
            app:layout_constraintTop_toTopOf="@id/btn_controls_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/column_2_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/column_3_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <HorizontalScrollView
            android:id="@+id/output_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/result_preview_text_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/output_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:singleLine="true"
                android:text="@{viewModel.expression}"
                android:textColor="@android:color/black"
                android:textSize="60sp"
                tools:text="@string/sample_expression_text" />

        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/result_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/btn_controls_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_preview_text_top">

            <TextView
                android:id="@+id/result_preview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:singleLine="true"
                android:text="@{viewModel.resultPreview}"
                android:textSize="30sp"
                tools:text="@string/sample_result_text" />

        </HorizontalScrollView>

        <Button
            android:id="@+id/decimal_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:onClick="@{() -> viewModel.onAddDecimal()}"
            android:text="@string/period"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/column_1_end"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_btn" />

        <Button
            android:id="@+id/zero_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('0')}"
            android:text="@string/zero"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/column_2_end"
            app:layout_constraintStart_toStartOf="@+id/column_1_end"
            app:layout_constraintTop_toBottomOf="@+id/two_btn" />

        <Button
            android:id="@+id/one_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('1')}"
            android:text="@string/one"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/decimal_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_1_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four_btn" />

        <Button
            android:id="@+id/two_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('2')}"
            android:text="@string/two"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/zero_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_2_end"
            app:layout_constraintStart_toStartOf="@+id/column_1_end"
            app:layout_constraintTop_toBottomOf="@+id/five_btn" />

        <Button
            android:id="@+id/three_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('3')}"
            android:text="@string/three"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/delete_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_3_end"
            app:layout_constraintStart_toStartOf="@+id/column_2_end"
            app:layout_constraintTop_toBottomOf="@+id/six_btn" />

        <Button
            android:id="@+id/four_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('4')}"
            android:text="@string/four"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/one_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_1_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven_btn" />

        <Button
            android:id="@+id/five_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('5')}"
            android:text="@string/five"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/two_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_2_end"
            app:layout_constraintStart_toStartOf="@+id/column_1_end"
            app:layout_constraintTop_toBottomOf="@+id/eight_btn" />

        <Button
            android:id="@+id/six_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('6')}"
            android:text="@string/six"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/three_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_3_end"
            app:layout_constraintStart_toStartOf="@+id/column_2_end"
            app:layout_constraintTop_toBottomOf="@+id/nine_btn" />

        <Button
            android:id="@+id/seven_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('7')}"
            android:text="@string/seven"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/four_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_1_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_controls_top"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/eight_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('8')}"
            android:text="@string/eight"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/five_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_2_end"
            app:layout_constraintStart_toStartOf="@+id/column_1_end"
            app:layout_constraintTop_toTopOf="@+id/btn_controls_top"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/nine_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddDigit('9')}"
            android:text="@string/nine"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/six_btn"
            app:layout_constraintEnd_toStartOf="@+id/column_3_end"
            app:layout_constraintStart_toStartOf="@+id/column_2_end"
            app:layout_constraintTop_toTopOf="@+id/btn_controls_top"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorNumpadButton"
            android:focusableInTouchMode="false"
            android:longClickable="true"
            android:onClick="@{() -> viewModel.onDelete()}"
            android:text="@string/delete"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/column_3_end"
            app:layout_constraintStart_toStartOf="@+id/column_2_end"
            app:layout_constraintTop_toBottomOf="@+id/three_btn" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorButtonNormal"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddOperator(Operator.ADD)}"
            android:text="@string/plus_sign"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/submit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/column_3_end"
            app:layout_constraintTop_toBottomOf="@+id/subtract_btn" />

        <Button
            android:id="@+id/subtract_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorButtonNormal"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddOperator(Operator.SUBTRACT)}"
            android:text="@string/minus_sign"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/add_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/column_3_end"
            app:layout_constraintTop_toBottomOf="@+id/multiply_btn" />

        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorButtonNormal"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddOperator(Operator.MULTIPLY)}"
            android:text="@string/multiply_sign"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/subtract_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/column_3_end"
            app:layout_constraintTop_toBottomOf="@+id/divide_btn" />

        <Button
            android:id="@+id/divide_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorButtonNormal"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onAddOperator(Operator.DIVIDE)}"
            android:text="@string/divide_sign"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toTopOf="@+id/multiply_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/column_3_end"
            app:layout_constraintTop_toTopOf="@+id/btn_controls_top"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/holo_orange_light"
            android:focusableInTouchMode="false"
            android:onClick="@{() -> viewModel.onApply()}"
            android:text="@string/equals_sign"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/calculator_button_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/column_3_end"
            app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>